Move the sponsor form to the front page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,3 +25,20 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <!-- /Facebook Page Plugin -->
+
+<header class="header">
+	<div class="hero">
+		<div class="hero-inner">
+			<p class="coderdojo-logo"><img src="{{ site.baseurl }}/assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
+			<h1 class="dojocon-logo"><a href="{{ site.baseurl }}/">DojoCon Japan 2016</a></h1>
+			<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
+			<ul class="teaser-action">
+				<li><a href="{{ site.baseurl }}/#sponsor-form">スポンサー募集中</a></li>
+			</ul>
+		</div>
+	</div>
+</header>
+
+<div class="below-header">
+	<p class="comingsoon">Comming Soon...</p>
+</div>
