--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -32,10 +32,32 @@ iframe {
 	vertical-align: top;
 }
 
+.footer {
+	background: $cloud;
+	// @include pad(5px 15px);
+	position: absolute;
+	height: 24px;
+	// width: 100%;
+	bottom: 0;
+	left: 0;
+	right: 0;
+
+	.copyright {
+		text-align: center;
+		font-family: $roboto;
+		font-size: rem(12);
+		line-height: 24px;
+	}
+}
+
 .hero {
 	background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 71%, #2cb5e8 100%);
 	color: #fff;
 	text-align: center;
+
+	a {
+		color: #fff;
+	}
 
 	.hero-inner {
 		@include pad(30px 0 10px);
@@ -148,6 +170,24 @@ iframe {
 		}
 	}
 
+	.teaser-action {
+		@include pad(0 15px);
+		margin-top: $gutter;
+
+		> li {
+			margin-bottom: $gutter / 2;
+			text-align: center;
+
+			a {
+				display: inline-block;
+				color: #fff;
+				border: 1px solid #fff;
+				border-radius: 4px;
+				text-align: center;
+				@include pad(0.25em 1em);
+			}
+		}
+	}
 }
 
 .below-header {
@@ -194,35 +234,12 @@ iframe {
 	// }
 }
 
-.teaser-action {
-	@include pad(0 15px);
-	margin-top: $gutter;
-
-	> li {
-		margin-bottom: $gutter / 2;
-		text-align: center;
-
-		a {
-			display: inline-block;
-			// background: $blue;
-			color: #fff;
-			// font-size: rem(14);
-			// font-weight: bold;
-			border: 1px solid #fff;
-			border-radius: 4px;
-			text-align: center;
-			@include pad(0.25em 1em);
-		}
-	}
-}
-
 main {
 	display: block;
-	@include pad($gutter 0 ($gutter + 24px));
 }
 
 [class^="section-"], [class*=" section-"] {
-	margin-top: $gutter * 2;
+	padding: ($gutter * 2) 0;
 
 	&:first-child {
 		margin-top: 0;
@@ -236,6 +253,7 @@ main {
 		font-weight: 700;
 		padding-bottom: 5px;
 		position: relative;
+		z-index: 9;
 
 		@include media(min-width $s-screen) {
 			font-size: rem(28);
@@ -253,6 +271,9 @@ main {
 			margin: auto;
 		}
 	}
+}
+
+.section-follow-us {
 
 	.sns-widgets {
 		@include outer-container;
@@ -278,33 +299,20 @@ main {
 				@include span-columns(6);
 			}
 		}
-
-		.fb-page-plugin {
-			// @include span-columns(5);
-			// @include shift(0.5);
-		}
-
-		.tw-widget {
-			// @include span-columns(5);
-			// @include shift(1);
-		}
 	}
 }
 
-.footer {
-	background: $cloud;
-	// @include pad(5px 15px);
-	position: absolute;
-	height: 24px;
-	// width: 100%;
-	bottom: 0;
-	left: 0;
-	right: 0;
+.section-sponsor-form:first-child,
+.section-sponsor-form {
+	border-top: 1px solid $default-border-color;
+	text-align: center;
+	padding-bottom: 24px;
+	overflow: hidden;
+	padding-top: $gutter * 2;
 
-	.copyright {
-		text-align: center;
-		font-family: $roboto;
-		font-size: rem(12);
-		line-height: 24px;
+	.google-form {
+		width: 100%;
+		height: 2600px;
+		margin-top: -140px;
 	}
 }
