Add OGP & favicon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<p class="copyright">&copy; 2016 DojoCon Japan</p>
 </footer>
-<script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "assets/js/main.js" | prepend: site.baseurl }}" type="text/javascript"></script>
 </body>
 </html>
