--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,8 +10,20 @@
 
 <link href='https://fonts.googleapis.com/css?family=Oswald:400,700|Roboto:400,700|Raleway:800|Rubik:900italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
-<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+<link rel="stylesheet" href="{{ "assets/css/main.css" | prepend: site.baseurl }}">
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
+<link rel="shortcut icon" href="{{ site.baseurl }}assets/images/favicon.ico" type="image/vnd.microsoft.ico"/>
+<link rel="apple-touch-icon" href="{{ site.baseurl }}assets/images/apple-touch-icon.png">
+
+<meta property="og:locale" content="ja_JP" />
+<meta property="og:type" content="{% if page.url == site.baseurl %}website{% else %}article{% endif %}" />
+<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+<meta property="og:site_name" content="{{ site.title }}" />
+<meta property="og:image" content="{% if page.ogp_image %}{{ site.url }}{{ site.baseurl }}assets/images/{{ page.ogp_image }}{% else %}{{ site.url }}{{ site.baseurl }}assets/images/ogp.png{% endif %}" />
+<meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
+<meta name="twitter:image" content="{% if page.ogp_image %}{{ site.url }}{{ site.baseurl }}assets/images/{{ page.ogp_image }}{% else %}{{ site.url }}{{ site.baseurl }}assets/images/ogp.png{% endif %}"/>
 </head>
 <body>
 
@@ -29,11 +41,11 @@
 <header class="header">
 	<div class="hero">
 		<div class="hero-inner">
-			<p class="coderdojo-logo"><img src="{{ site.baseurl }}/assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
-			<h1 class="dojocon-logo"><a href="{{ site.baseurl }}/">DojoCon Japan 2016</a></h1>
+			<p class="coderdojo-logo"><img src="{{ site.baseurl }}assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
+			<h1 class="dojocon-logo"><a href="{{ site.baseurl }}">DojoCon Japan 2016</a></h1>
 			<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
 			<ul class="teaser-action">
-				<li><a href="{{ site.baseurl }}/#sponsor-form">スポンサー募集中</a></li>
+				<li><a href="{{ site.baseurl }}#sponsor-form">スポンサー募集中</a></li>
 			</ul>
 		</div>
 	</div>
