--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -238,7 +238,8 @@ main {
 	display: block;
 }
 
-[class^="section-"], [class*=" section-"] {
+[class^="section-"]:not(.section-title),
+[class*=" section-"]:not(.section-title) {
 	padding: ($gutter * 2) 0;
 
 	&:first-child {
@@ -305,6 +306,7 @@ main {
 .section-sponsor-form:first-child,
 .section-sponsor-form {
 	border-top: 1px solid $default-border-color;
+	background: #fcfcfc;
 	text-align: center;
 	padding-bottom: 24px;
 	overflow: hidden;
@@ -312,7 +314,15 @@ main {
 
 	.google-form {
 		width: 100%;
-		height: 2600px;
-		margin-top: -140px;
+		height: 2900px;
+		margin-top: -40px;
+
+		@include media(min-width $xxs-screen) {
+			height: 2600px;
+		}
+
+		@include media(min-width $s-screen) {
+			margin-top: -140px;
+		}
 	}
 }
