Set Hiragino as the default font family

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -15,6 +15,7 @@ body {
 	min-height: 100%;
 	position: relative;
 	line-height: 1.75;
+	font-family: $hiragino;
 	font-size: rem(14);
 	color: $default-font-color;
 }
