Show the overflow of Google form

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -310,7 +310,7 @@ main {
 	background: #fcfcfc;
 	text-align: center;
 	padding-bottom: 24px;
-	overflow: hidden;
+	// overflow: hidden;
 	padding-top: $gutter * 2;
 
 	.google-form {
