--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,5 +52,5 @@
 </header>
 
 <div class="below-header">
-	<p class="comingsoon">Comming Soon...</p>
+	<p class="comingsoon">Coming Soon...</p>
 </div>
