--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,13 +44,11 @@
 			<p class="coderdojo-logo"><img src="{{ site.baseurl }}assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
 			<h1 class="dojocon-logo"><a href="{{ site.baseurl }}">DojoCon Japan 2016</a></h1>
 			<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
+			<p class="dojocon-info">2016年8月27日（土）<br>
+				会場：内田洋行 大阪 ユビキタス協創広場 CANVAS</p>
 			<ul class="teaser-action">
 				<li><a href="{{ site.baseurl }}#sponsor-form">スポンサー募集中</a></li>
 			</ul>
 		</div>
 	</div>
 </header>
-
-<div class="below-header">
-	<p class="comingsoon">Coming Soon...</p>
-</div>
