Revert "Revert "Add date & venue""
This reverts commit 0c2e7cb8935f8c7e05233cd91195fb9808e12bc1.

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -61,7 +61,7 @@ iframe {
 	}
 
 	.hero-inner {
-		@include pad(30px 0 10px);
+		@include pad(30px 0);
 		display: inline-block;
 	}
 
@@ -169,6 +169,12 @@ iframe {
 				margin-left: 1em;
 			}
 		}
+	}
+
+	.dojocon-info {
+		font-weight: bold;
+		margin-top: $gutter;
+		@include pad(0 15px);
 	}
 
 	.teaser-action {
@@ -318,7 +324,7 @@ main {
 	padding-top: $gutter * 2;
 
 	.pdf-link {
-		padding-top: 20px;
+		@include pad(20px 15px 0);
 		position: relative;
 		z-index: 9;
 	}
