--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,58 +8,7 @@
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-<link href='https://fonts.googleapis.com/css?family=Oswald:400,700|Roboto:400,700|Raleway:800|Rubik:900italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ "assets/css/main.css" | prepend: site.baseurl }}">
-<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
-<link rel="shortcut icon" href="{{ site.baseurl }}assets/images/favicon.ico" type="image/vnd.microsoft.ico"/>
-<link rel="apple-touch-icon" href="{{ site.baseurl }}assets/images/apple-touch-icon.png">
-
-<meta property="og:locale" content="ja_JP" />
-<meta property="og:type" content="{% if page.url == site.baseurl %}website{% else %}article{% endif %}" />
-<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-<meta property="og:site_name" content="{{ site.title }}" />
-<meta property="og:image" content="{% if page.ogp_image %}{{ site.url }}{{ site.baseurl }}assets/images/{{ page.ogp_image }}{% else %}{{ site.url }}{{ site.baseurl }}assets/images/ogp.png{% endif %}" />
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
-<meta name="twitter:image" content="{% if page.ogp_image %}{{ site.url }}{{ site.baseurl }}assets/images/{{ page.ogp_image }}{% else %}{{ site.url }}{{ site.baseurl }}assets/images/ogp.png{% endif %}"/>
+<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
 <body>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-75447905-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-<!-- Facebook Page Plugin -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<!-- /Facebook Page Plugin -->
-
-<header class="header">
-	<div class="hero">
-		<div class="hero-inner">
-			<p class="coderdojo-logo"><img src="{{ site.baseurl }}assets/images/coderdojo-logo.svg" alt="CoderDojo"></p>
-			<h1 class="dojocon-logo"><a href="{{ site.baseurl }}">DojoCon Japan 2016</a></h1>
-			<p class="dojocon-copy"><span class="horizontal-line">The more dojos, the more cool coders.</span></p>
-			<p class="dojocon-info">2016年8月27日（土）<br>
-				会場：内田洋行 大阪 ユビキタス協創広場 CANVAS</p>
-			<ul class="teaser-action">
-				<li><a href="{{ site.baseurl }}#sponsor-form">スポンサー募集中</a></li>
-			</ul>
-		</div>
-	</div>
-</header>
