--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -1,345 +1,4 @@
 @charset "UTF-8";
-// @import "compass";
 @import "bourbon/bourbon";
-@import "neat/neat";
+// @import "neat/neat";
 // @import "base/base";
-@import "variables";
-@import "reset";
-
-html {
-	font-size: 10px;
-	height: 100%;
-}
-
-body {
-	min-height: 100%;
-	position: relative;
-	line-height: 1.75;
-	font-family: $hiragino;
-	font-size: rem(14);
-	color: $default-font-color;
-}
-
-a {
-	color: $brand-color;
-	text-decoration: none;
-}
-
-img {
-	max-width: 100%;
-}
-
-iframe {
-	vertical-align: top;
-}
-
-.footer {
-	background: $cloud;
-	// @include pad(5px 15px);
-	position: absolute;
-	height: 24px;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	border-top: 1px solid $default-border-color;
-
-	.copyright {
-		text-align: center;
-		font-family: $roboto;
-		font-size: rem(12);
-		line-height: 24px;
-	}
-}
-
-.hero {
-	background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 71%, #2cb5e8 100%);
-	color: #fff;
-	text-align: center;
-
-	a {
-		color: #fff;
-	}
-
-	.hero-inner {
-		@include pad(30px 0);
-		display: inline-block;
-	}
-
-	.coderdojo-logo {
-		margin-bottom: 20px;
-
-		img {
-			width: 100px;
-
-			@include media(min-width $xxs-screen) {
-				width: 120px;
-			}
-
-			@include media(min-width $xs-screen) {
-				width: 140px;
-			}
-
-			@include media(min-width $s-screen) {
-				width: 160px;
-			}
-		}
-	}
-
-	.dojocon-logo {
-		font-family: $oswald;
-		font-size: rem(36);
-		font-weight: 700;
-		letter-spacing: -0.02em;
-		line-height: 1;
-
-		@include media(min-width $xxs-screen) {
-			font-size: rem(48);
-		}
-
-		@include media(min-width $xs-screen) {
-			font-size: rem(64);
-		}
-
-		@include media(min-width $s-screen) {
-			font-size: rem(80);
-		}
-
-		@include media(min-width $m-screen) {
-			font-size: rem(100);
-		}
-
-		@include media(min-width $l-screen) {
-			font-size: rem(120);
-		}
-	}
-
-	.dojocon-copy {
-		font-family: $raleway;
-		font-size: rem(10);
-		font-weight: 800;
-		text-transform: uppercase;
-		overflow: hidden;
-		line-height: 1;
-		margin-top: 1.5em;
-
-		@include media(min-width $xxs-screen) {
-			font-size: rem(12);
-		}
-
-		@include media(min-width $xs-screen) {
-			font-size: rem(14);
-		}
-
-		@include media(min-width $s-screen) {
-			font-size: rem(16);
-		}
-
-		@include media(min-width $m-screen) {
-			font-size: rem(20);
-		}
-
-		@include media(min-width $l-screen) {
-			font-size: rem(24);
-		}
-
-		.horizontal-line {
-			position: relative;
-
-			&:before,
-			&:after {
-				content: '';
-				width: 2560px;
-				border-bottom: 1px solid #fff;
-				position: absolute;
-				top: 50%;
-				margin-top: -1px;
-
-				@include media(min-width $s-screen) {
-					border-bottom-width: 2px;
-				}
-			}
-
-			&:before {
-				right: 100%;
-				margin-right: 1em;
-			}
-
-			&:after {
-				left: 100%;
-				margin-left: 1em;
-			}
-		}
-	}
-
-	.dojocon-info {
-		font-weight: bold;
-		margin-top: $gutter;
-		@include pad(0 15px);
-	}
-
-	.teaser-action {
-		@include pad(0 15px);
-		margin-top: $gutter;
-
-		> li {
-			margin-bottom: $gutter / 2;
-			text-align: center;
-
-			a {
-				display: inline-block;
-				color: #fff;
-				border: 1px solid #fff;
-				border-radius: 4px;
-				text-align: center;
-				@include pad(0.25em 1em);
-			}
-		}
-	}
-}
-
-.below-header {
-	background: $red;
-	color: #fff;
-	@include pad(0 15px);
-}
-
-.comingsoon {
-	font-family: $rubik;
-	font-size: rem(20);
-	font-weight: 900;
-	font-style: italic;
-	text-align: center;
-	text-transform: uppercase;
-	line-height: 1.5;
-
-	@include media(min-width $xxs-screen) {
-		font-size: rem(24);
-	}
-
-	// @include media(min-width $xs-screen) {
-	// 	font-size: rem(32);
-	// }
-
-	@include media(min-width $s-screen) {
-		font-size: rem(28);
-	}
-
-	// @include media(min-width $m-screen) {
-	// 	font-size: rem(44);
-	// }
-
-	// @include media(min-width $l-screen) {
-	// 	font-size: rem(48);
-	// }
-
-	// @include media(min-width $xl-screen) {
-	// 	font-size: rem(56);
-	// }
-
-	// @include media(min-width $xxl-screen) {
-	// 	font-size: rem(64);
-	// }
-}
-
-main {
-	display: block;
-}
-
-[class^="section-"]:not(.section-title),
-[class*=" section-"]:not(.section-title) {
-	padding: ($gutter * 2) 0;
-
-	&:first-child {
-		margin-top: 0;
-	}
-
-	.section-title {
-		text-align: center;
-		color: $dark-font-color;
-		font-family: $roboto;
-		font-size: rem(24);
-		font-weight: 700;
-		padding-bottom: 5px;
-		position: relative;
-		z-index: 9;
-
-		@include media(min-width $s-screen) {
-			font-size: rem(28);
-		}
-
-		&:after {
-			content: '';
-			height: 2px;
-			width: 20px;
-			background: $brand-color;
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			margin: auto;
-		}
-	}
-}
-
-.section-follow-us {
-
-	.sns-widgets {
-		@include outer-container;
-		margin-top: $gutter;
-		@include pad(0 15px);
-		text-align: center;
-
-		> li {
-			display: inline-block;
-			vertical-align: top;
-			width: 100%;
-			margin-bottom: $gutter;
-			border-radius: 4px;
-			overflow: hidden;
-			background: $cloud;
-			box-shadow: 0 3px 0 rgba(8, 1, 2, 0.03);
-
-			@include media(min-width $xxs-screen) {
-				width: 450px;
-			}
-
-			@include media(min-width $xs-screen) {
-				@include span-columns(6);
-			}
-
-			&.tw-widget {
-				border: 1px solid #e2e9ec;
-			}
-		}
-	}
-}
-
-.section-sponsor-form:first-child,
-.section-sponsor-form {
-	border-top: 1px solid $default-border-color;
-	background: #fcfcfc;
-	text-align: center;
-	padding-bottom: 24px;
-	overflow: hidden;
-	padding-top: $gutter * 2;
-
-	.pdf-link {
-		@include pad(20px 15px 0);
-		position: relative;
-		z-index: 9;
-	}
-
-	.google-form {
-		width: 100%;
-		height: 3100px;
-		margin-top: -40px;
-
-		@include media(min-width $xxs-screen) {
-			height: 3000px;
-		}
-
-		@include media(min-width $s-screen) {
-			margin-top: -140px;
-		}
-	}
-}
