--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,3 +14,28 @@
 <body>
 
 <div class="container">
+
+<header class="header">
+	<nav class="header-nav">
+		<ul>
+			<li><a href="">Home</a></li>
+			<li><a href="">About</a>
+				<ul>
+					<li><a href="">About</a></li>
+					<li><a href="">News</a></li>
+					<li><a href="">Contact</a></li>
+					<li><a href="">Staff</a></li>
+				</ul>
+			</li>
+			<li><a href="">Access</a></li>
+			<li><a href="">Speakers</a></li>
+			<li><a href="">Sponsers</a></li>
+			<li><a href="">Time Table</a></li>
+		</ul>
+	</nav>
+	<ul class="action">
+		<li><a href="">f</a></li>
+		<li><a href="">t</a></li>
+		<li class="entry"><a href="">Entry</a></li>
+	</ul>
+</header>
