--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,6 @@
 	<ul class="action">
 		<li><a href="">f</a></li>
 		<li><a href="">t</a></li>
-		<li class="entry"><a href="">Entry</a></li>
+		<li class="entry"><a href="{{ site.entryurl }}">Entry</a></li>
 	</ul>
 </header>
