--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
-
+<footer class="footer">
+	<a href="">Page Top</a>
+	<p class="copyright">© DojoCon Japan 2016</p>
+</footer>
 
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}" type="text/javascript"></script>
 </body>
