--- a/assets/_sass/_variables.scss
+++ b/assets/_sass/_variables.scss
@@ -14,7 +14,7 @@ $xxs-screen: 480px;
 
 // DojoCon
 $hiragino: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-$noto: "Noto Sans Japanese", $hiragino;
+$noto: "Noto Sans CJK JP", $hiragino;
 $oswald: "Oswald", sans-serif;
 
 $font-size: 16;
