--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -4,6 +4,12 @@
 @import "neat/neat";
 @import "omega-reset";
 @import "reset";
+@import "fonts";
+
+body {
+	font-family: $noto;
+	line-height: $line-height;
+}
 
 .container {
 	@include outer-container;
