--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 <link rel="apple-touch-icon" href="{{ '/assets/images/apple-touch-icon.png' | prepend: site.baseurl }}">
 
 <meta property="og:locale" content="ja_JP">
-<meta property="og:type" content="{% assign homeurl = site.baseurl | append: '/' %}{% if page.url == homeurl %}website{% else %}article{% endif %}">
+<meta property="og:type" content="{% if page.url == homeurl %}website{% else %}article{% endif %}">
 <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 <meta property="og:site_name" content="{{ site.title }}">
