--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -3,14 +3,96 @@
 @import "bourbon/bourbon";
 @import "neat/neat";
 @import "omega-reset";
-@import "reset";
 @import "fonts";
+@import "reset";
+@import "components";
 
 body {
 	font-family: $noto;
 	line-height: $line-height;
 }
 
-.container {
-	@include outer-container;
+a {
+	text-decoration: none;
+}
+
+img {
+	max-width: 100%;
+}
+
+.header {
+
+	.nav {
+		display: none;
+	}
+
+	.action {
+		display: none;
+	}
+}
+
+.hero {
+	background: url("//placehold.it/1920x1280/eee.png") no-repeat center center;
+	background-size: cover;
+
+	.hero-main {
+		background: rgba($blue, .85);
+		padding: 30px 15px 15px;
+	}
+
+	.logo {
+		margin: 0 auto 20px;
+		width: 140px;
+	}
+
+	.line-taiji {
+		margin: 20px auto;
+		width: 160px;
+	}
+
+	.subtitle {
+		margin: 20px auto 10px;
+		width: 230px;
+	}
+
+	.action {
+		text-align: center;
+
+		> li {
+			display: inline-block;
+			margin: 5px;
+
+			&.entry {
+				display: block;
+			}
+		}
+	}
+
+	.date-venue {
+		background: rgba(#fff, .8);
+		color: $blue;
+		padding: 15px;
+		text-align: center;
+
+		.date {
+
+			time {
+				font-family: $oswald;
+				font-size: 30px;
+				line-height: 1;
+			}
+
+			.day {
+				font-weight: $bold;
+			}
+		}
+
+		.caption {
+			display: none;
+		}
+
+		.venue {
+			font-size: 14px;
+		}
+	}
 }
