--- a/assets/_sass/_components.scss
+++ b/assets/_sass/_components.scss
@@ -12,10 +12,10 @@
 
 button,
 .button {
-	background: $clouds;
+	background: $default-font-color;
 	border-radius: 4px;
 	box-shadow: 0 0 5px rgba(#000, .5);
-	color: $default-font-color;
+	color: #fff;
 	cursor: pointer;
 	display: inline-block;
 	font-size: 18px;
@@ -27,7 +27,7 @@ button,
 	&:hover,
 	&:active {
 		text-decoration: none;
-		background: $clouds-dark;
+		background: darken($default-font-color, 5);
 	}
 
 	&.button-small {
@@ -68,7 +68,7 @@ button,
 
 		&:hover,
 		&:active {
-			background: lighten(#000, 1);
+			background: lighten(#000, 5);
 		}
 	}
 
