--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -393,7 +393,150 @@ strong {
 }
 
 .timetable-section {
+	$clock-width: 55px;
+
 	background: $yellow;
 	color: $blue;
 
+	a {
+		color: inherit;
+		text-decoration: underline;
+
+		&:hover {
+			text-decoration: none;
+		}
+	}
+
+	.timetable {
+
+		.session-block,
+		.workshop-block {
+			@include outer-container;
+			background: #f3f3f3;
+			margin-bottom: 35px;
+
+			h2 {
+				background: $blue;
+				color: #fff;
+				font-size: 28px;
+				font-weight: $light;
+				line-height: 40px;
+				height: 80px;
+				padding: 20px 10px 20px ($clock-width + 10px);
+			}
+		}
+
+		.clock {
+			background: $blue;
+			color: #fff;
+			float: left;
+			font-size: 14px;
+			font-weight: $light;
+			padding-top: 80px;
+			text-align: center;
+
+			> li {
+				height: 12 * 30px;
+				width: $clock-width;
+			}
+		}
+
+		.session-line,
+		.workshop-line {
+
+			.sessions,
+			.workshops {
+
+				> li {
+					padding: 3px 10px 0 ($clock-width + 10px);
+
+					.session-title,
+					.workshop-title {
+						font-size: 16px;
+						font-weight: $bold;
+
+						.speaker {
+							font-weight: $light;
+						}
+					}
+
+					.time {
+						font-size: 14px;
+						font-weight: $light;
+					}
+
+					.button {
+						box-shadow: none;
+						margin-top: 0.5em;
+						text-decoration: none;
+						width: 100px;
+					}
+				}
+
+				.bg-light {
+					background: #e3ecef;
+				}
+
+				.bg-dark {
+					background: #d3e6eb;
+				}
+
+				@for $i from 1 through 24 {
+					$interval: 5;
+
+					.duration-#{$i * $interval}min {
+						height: $i * 30px;
+					}
+
+					.break-#{$i * $interval}min {
+						margin-bottom: $i * 30px;
+					}
+				}
+			}
+		}
+	}
+
+	.exhibition-block {
+		@include outer-container;
+
+		h2 {
+			background: $blue;
+			color: #fff;
+			font-size: 28px;
+			font-weight: $light;
+			line-height: 40px;
+			height: 80px;
+			margin-bottom: 15px;
+			padding: 20px 10px;
+			text-align: center;
+		}
+
+		.exhibitions {
+
+			> li {
+				background: #fff;
+				margin-bottom: 15px;
+
+				figure {
+					text-align: center;
+				}
+
+				.description {
+					font-size: 14px;
+					padding: 1em 1.5em;
+				}
+
+				.exhibition-title {
+					font-size: 15px;
+					font-weight: $bold;
+					margin-bottom: 0.5em;
+
+					small {
+						font-size: 13px;
+						font-weight: $light;
+					}
+				}
+			}
+		}
+	}
 }
