Add footer style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-	<a href="">Page Top</a>
+	<a href="#pagetop" class="goto-pagetop">Page Top</a>
 	<p class="copyright">© DojoCon Japan 2016</p>
 </footer>
 
