--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -256,6 +256,7 @@ strong {
 
 		.workshop-area,
 		.session-area {
+			background-position: center;
 			background-size: cover;
 			height: 135px;
 			position: relative;
