--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -80,6 +80,16 @@ strong {
 			display: inline-block;
 			margin: 5px;
 
+			&.share {
+				color: #fff;
+				font-size: 24px;
+				opacity: .7;
+
+				&:hover {
+					opacity: 1;
+				}
+			}
+
 			&.entry {
 				display: block;
 			}
