--- a/_includes/action.html
+++ b/_includes/action.html
@@ -1,5 +1,5 @@
 <ul class="action">
 	<li class="share"><a href="" class="icon-facebook-circle"></a></li>
 	<li class="share"><a href="" class="icon-twitter-circle"></a></li>
-	<li class="entry"><a class="button button-yellow" href="{{ site.entryurl }}" target="_blank">Entry</a></li>
+	<li class="entry"><a href="{{ site.entryurl }}" class="button button-yellow icon-flag" target="_blank">Entry</a></li>
 </ul>
