Improve sns widgets sytle

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -630,6 +630,11 @@ strong {
 
 	.fb-tw-widgets {
 		@include outer-container;
+		text-align: center;
+
+		> li {
+			margin-bottom: 20px;
+		}
 	}
 
 	.sns-id {
