--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,6 +48,8 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
+<button class="icon-bar menu-button js-menu-button"></button>
+
 <header class="header">
 	<nav class="nav">
 		<ul>
