--- a/assets/_sass/_components.scss
+++ b/assets/_sass/_components.scss
@@ -13,6 +13,7 @@
 button,
 .button {
 	background: $default-font-color;
+	border: 0;
 	border-radius: 4px;
 	box-shadow: 0 0 5px rgba(#000, .5);
 	color: #fff;
