--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,19 +53,19 @@
 <header class="header">
 	<nav class="nav">
 		<ul>
-			<li><a href="">Home</a></li>
+			<li><a href="#pagetop">Home</a></li>
 			<li><a href="">About</a>
 				<ul>
-					<li><a href="">About</a></li>
-					<li><a href="">News</a></li>
-					<li><a href="">Contact</a></li>
-					<li><a href="">Staff</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#news">News</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li><a href="#staff">Staff</a></li>
 				</ul>
 			</li>
-			<li><a href="">Access</a></li>
-			<li><a href="">Speakers</a></li>
-			<li><a href="">Sponsers</a></li>
-			<li><a href="">Time Table</a></li>
+			<li><a href="#access">Access</a></li>
+			<li><a href="#speakers">Speakers</a></li>
+			<li><a href="#sponsors">Sponsors</a></li>
+			<li><a href="#timetable">Time Table</a></li>
 		</ul>
 	</nav>
 	{% include action.html %}
